<?xml version="1.0"?>
<package format="2">
  <name>udp_bridge</name>
  <version>0.0.0</version>
  <description>The udp_bridge package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geographic_msgs</build_depend>
  <build_depend>geographic_visualization_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>marine_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>project11</build_depend>
  <build_depend>diagnostic_msgs</build_depend>
  <build_export_depend>geographic_msgs</build_export_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>marine_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>project11</build_export_depend>
  <build_export_depend>diagnostic_msgs</build_export_depend>
  <exec_depend>geographic_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>marine_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>project11</exec_depend>
  <exec_depend>diagnostic_msgs</exec_depend>
  <depend>darknet_ros_msgs</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
