<?xml version="1.0"?>
<package format="2">
  <name>udp_bridge</name>
  <version>0.0.0</version>
  <description>The udp_bridge package</description>

  <maintainer email="roland@ccom.unh.edu">Roland Arsenault</maintainer>


  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  
  <depend>geographic_visualization_msgs</depend>
  <depend>geographic_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>marine_msgs</depend>
  <depend>roscpp</depend>
  <depend>std_msgs</depend>
  <depend>project11</depend>
  <depend>diagnostic_msgs</depend>
  <depend>darknet_ros_msgs</depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
